--- a/grid/index.html
+++ b/grid/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GRID</title>
+    <title>GRID-FLEX SAMPLE</title>
     <style>
         body {
             margin: 0;
@@ -23,6 +23,10 @@
         header {
             background-color: red;
             grid-area: header;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 10px;
         }
 
         .left-menu {
@@ -43,7 +47,10 @@
 </head>
 
 <body>
-    <header>HEADER</header>
+    <header>
+        <div class="logo">LOGO</div>
+        <div class="motherfuck">MENU</div>
+    </header>
     <div class="left-menu">MENU</div>
     <div class="content">CONTENT</div>
     <footer>FOOTER</footer>
